module(
    name = "envoy-website",
    version = "0.0.0",
)

# Core Bazel rule sets - these come transitively from envoy_toolshed but we declare
# them explicitly for clarity
bazel_dep(name = "aspect_bazel_lib", version = "2.22.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_python", version = "1.6.0")

# envoy_toolshed provides website building macros and utilities
# Not in BCR yet, so we use archive_override
bazel_dep(name = "envoy_toolshed", version = "0.3.15")
archive_override(
    module_name = "envoy_toolshed",
    urls = ["https://github.com/envoyproxy/toolshed/archive/refs/tags/bazel-v0.3.15.tar.gz"],
    strip_prefix = "toolshed-bazel-v0.3.15/bazel",
    integrity = "sha256-kx4r36cRfb/2at8z85cSzRbQ6y27VIc5tb8sb/AtMlo=",
)

# envoy - for documentation building
# Not in BCR yet, so we use git_override
# Note: We can't use archive_override with patches, so using git_override instead
bazel_dep(name = "envoy", version = "1.37.0-dev")
git_override(
    module_name = "envoy",
    remote = "https://github.com/envoyproxy/envoy",
    commit = "41b468c9b193c88ded4d94789c4793f02be5f758",
    patches = ["//bazel/patches:envoy_fix_module_bazel.patch"],
    patch_args = ["-p1"],
)

# Note: envoy_archive and bootstrap are still loaded via WORKSPACE.bzlmod
# - envoy_archive has no MODULE.bazel
# - bootstrap needs a custom BUILD file

# Setup jq toolchain from aspect_bazel_lib
bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.jq(version = "1.7")
use_repo(bazel_lib_toolchains, "jq", "jq_toolchains")

# Python toolchain setup
PYTHON_VERSION = "3.10"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = PYTHON_VERSION,
    is_default = True,
)

# Pip dependencies for website building
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "website_pip3",
    python_version = PYTHON_VERSION,
    requirements_lock = "//site:requirements.txt",
)
use_repo(pip, "website_pip3")
